Fix for bug 443483 (Closed windows need two cycle collections to be collected). r=bent, sr=jst, a=jst.